# master-covid

./: .gitignore  0-data-engineering.ipynb  1.desf-data-preparation.ipynb  1.diag-data-preparation.ipynb  README.md  c0-curation.ipynb  c0-forecast.ipynb  c1-curation.ipynb  c1-forecast.ipynb  curation.ipynb  forecast.ipynb  pyproject.toml  requirements.txt
